<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:padding="8dp"
        android:text="@string/dialog_delete_chat"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_description_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:paddingHorizontal="8dp"
        android:text="@string/dialog_delete_chat"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title_dialog" />

    <TextView
        android:id="@+id/text_button_position_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/selector_text_button"
        android:padding="10dp"
        android:text="@string/dialog_delete_text_button"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description_dialog" />

    <TextView
        android:id="@+id/text_button_negative_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/selector_text_button"
        android:padding="10dp"
        android:text="@string/dialog_cancel_text_button"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="@id/text_button_position_dialog"
        app:layout_constraintEnd_toStartOf="@id/text_button_position_dialog"
        app:layout_constraintTop_toTopOf="@id/text_button_position_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>